--- a/public/styles.css
+++ b/public/styles.css
@@ -2,13 +2,53 @@
     box-sizing: border-box;
 
 }
-
+:root{
+    --back: blue;
+}
 body {
     margin: 0;
     padding: 0;
+    background-size: cover;
 }
 
 .app-body {
-    margin-left: 40%;
     margin-top: 100px;
+    background-color: rgba(192, 192, 192,0.2);
+    backdrop-filter: blur(10px);
+    width: 500px;
+    height: 70%;
+    padding: 30px;
+}
+
+#search{
+    outline: none;
+    border: none;
+    border-bottom: 3px solid black;
+    background-color: transparent;
+    color: white;
+    font-size: 1.6rem;
+}
+
+#search::placeholder{
+    color: silver;
+}
+#search:focus{
+    border-color: silver;
+}
+
+.search button{
+    background-color: transparent;
+    font-size: 2rem;
+    color: white;
+    border: none;
+    justify-content: center;
+}
+
+.temperature{
+    font-size: 5rem;
+    font-weight: bold;
+}
+
+.forecast{
+    font-size: 2.5rem;
 }
