--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,17 +7,24 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
   <script src="https://kit.fontawesome.com/79094805a6.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="styles.css" />
   <title>
     <%=title %>
   </title>
 </head>
 
-<body>
-  <section class="app-body">
+<body background=<%=neededData.background %>>
+  <section class="app-body container-fluid">
+    <p class="weather-class">
+      <%= neededData.weatherClass %>
+    </p>
     <form class="search" action="/" method="POST">
       <input type="text" name="search" id="search" placeholder="Search" />
-      <button type="submit"><i class="fa-solid fa-magnifying-glass-location fa-xl search-button"></i></button>
+      <button type="submit"><i class="fa-solid fa-magnifying-glass fa-beat-fade search-button"></i></button>
     </form>
     <div class="location-info">
       <h3 class="country">
@@ -32,11 +39,11 @@
     </div>
 
     <h1 class="temperature"><span id="temp">
-        <%=neededData.temperature %>
-      </span> c</h1>
+        <%=neededData.temperature%>
+      </span>°C</h1>
 
     <div class="weatherInfo">
-      <h3 class="forcast">
+      <h3 class="forecast">
         <span class="main-forecast">
           <%=neededData.forecast %>
         </span>
@@ -45,7 +52,7 @@
 
       <h3 class="windSpeed"><span id="speed">
           <%=neededData.windSpeed %>
-        </span>ms</h3>
+        </span>m/s</h3>
       <h3 class="atmospheric-pressure"><span class="pressure">
           <%=neededData.pressure %>
         </span>hPa</h3>
@@ -54,6 +61,7 @@
         </span>%</h3>
     </div>
   </section>
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -64,6 +72,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+  <script src="format.js"></script>
 </body>
 
 </html>
