--- a/public/styles.css
+++ b/public/styles.css
@@ -9,6 +9,7 @@ body {
     margin: 0;
     padding: 0;
     background-size: cover;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .app-body {
@@ -16,7 +17,7 @@ body {
     background-color: rgba(192, 192, 192,0.2);
     backdrop-filter: blur(10px);
     width: 500px;
-    height: 70%;
+    height: 80%;
     padding: 30px;
 }
 
@@ -27,6 +28,7 @@ body {
     background-color: transparent;
     color: white;
     font-size: 1.6rem;
+    width: 80%;
 }
 
 #search::placeholder{
@@ -50,5 +52,29 @@ body {
 }
 
 .forecast{
+    font-size: 2.5rem;font-family: cursive;
+}
+
+.extras{
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(220, 240, 241, 0.3);
+    backdrop-filter: (10px);
+    padding: 20px;
+    width: 100%;
+}
+.extras h3{
     font-size: 2.5rem;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.extras h4{
+    font-size: 2.1rem;
+    color: white;
+}
+.extra-value{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
